Fix: contact form button align

--- a/components/Contact/index.module.scss
+++ b/components/Contact/index.module.scss
@@ -90,6 +90,6 @@
   .button {
     width: 100%;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
   }
 }
